@startuml

class Sample1Dto {
    - param1 String
    - param2 String
    - param3 String
}

class Sample1Domain {
    - param1 String
    - param2 Integer
    - domainParam3 String
}


interface Sample8Dto2DomainMapper{
    + toDomain(dto List<Sample1Dto>) : List<Sample1Domain>
}


interface Sample1Dto2DomainMapper{
    + toDomain(dto Sample1Dto) : Sample1Domain
}


Sample8Dto2DomainMapper .> Sample1Dto2DomainMapper: <<use>>
Sample1Dto .> Sample1Domain :copy
Sample8Dto2DomainMapper o..> Sample1Dto: from
Sample8Dto2DomainMapper o..> Sample1Domain: to
@enduml